--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,27 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">sdad</h2>
+        <h2 class="card-title">adasdsd</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ddsasd</li>
-            <li class="list-group-item">Email: <a href="mailto:asdasdasd">asdasdasd</a></li>
-            <li class="list-group-item">Office number: 21332</li>
+            <li class="list-group-item">ID: ad</li>
+            <li class="list-group-item">Email: <a href="mailto:ads">ads</a></li>
+            <li class="list-group-item">Office number: 32</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">aaaaa</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: sdfs</li>
+            <li class="list-group-item">Email: <a href="mailto:sfd">sfd</a></li>
+            <li class="list-group-item">Office number: 123</li>
         </ul>
     </div>
 </div>
