--- a/output/team.html
+++ b/output/team.html
@@ -25,27 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">adasdsd</h2>
+        <h2 class="card-title">sdasd</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ad</li>
-            <li class="list-group-item">Email: <a href="mailto:ads">ads</a></li>
-            <li class="list-group-item">Office number: 32</li>
+            <li class="list-group-item">ID: asdads</li>
+            <li class="list-group-item">Email: <a href="mailto:asdas">asdas</a></li>
+            <li class="list-group-item">Office number: 234</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">aaaaa</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+        <h2 class="card-title">adasd</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: sdfs</li>
-            <li class="list-group-item">Email: <a href="mailto:sfd">sfd</a></li>
-            <li class="list-group-item">Office number: 123</li>
+            <li class="list-group-item">ID: sadad</li>
+            <li class="list-group-item">Email: <a href="mailto:adad">adad</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/dasdasda" target="_blank" rel="noopener noreferrer">dasdasda</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">asdasd</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: sdasdas</li>
+            <li class="list-group-item">Email: <a href="mailto:adasd">adasd</a></li>
+            <li class="list-group-item">School: asdasdad</li>
         </ul>
     </div>
 </div>
