Added CSS styling

--- a/output/team.html
+++ b/output/team.html
@@ -21,50 +21,64 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
-                <div class="card employee-card">
+
+        <div class="team-area row justify-content-center">
+            <div class="employee-card col-md-4 mt-4">
     <div class="card-header">
-        <h2 class="card-title">sdasd</h2>
+        <h2 class="card-title">asada</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: asdads</li>
-            <li class="list-group-item">Email: <a href="mailto:asdas">asdas</a></li>
-            <li class="list-group-item">Office number: 234</li>
+            <li class="list-group-item"><span class="list-item">ID: </span>asdad</li>
+            <li class="list-group-item"><span class="list-item">Email: </span><a
+                    href="mailto:asda">asda</a></li>
+            <li class="list-group-item"><span class="list-item">Office number: </span>232</li>
         </ul>
     </div>
-</div>
-<div class="card employee-card">
+</div>,<div class="employee-card col-md-4 mt-4">
     <div class="card-header">
-        <h2 class="card-title">adasd</h2>
+        <h2 class="card-title">asadads</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item"><span class="list-item">ID: </span>asdsda</li>
+            <li class="list-group-item"><span class="list-item">Email: </span><a
+                    href="mailto:aads">aads</a></li>
+            <li class="list-group-item"><span class="list-item">Office number: </span>232</li>
+        </ul>
+    </div>
+</div><div class="employee-card col-md-4 mt-4">
+    <div class="card-header">
+        <h2 class="card-title">add</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: sadad</li>
-            <li class="list-group-item">Email: <a href="mailto:adad">adad</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/dasdasda" target="_blank" rel="noopener noreferrer">dasdasda</a></li>
+            <li class="list-group-item"><span class="list-item">ID: </span>asda</li>
+            <li class="list-group-item"><span class="list-item">Email: </span><a
+                    href="mailto:adads">adads</a></li>
+            <li class="list-group-item"><span class="list-item">GitHub: </span><a href="https://github.com/23"
+                    target="_blank" rel="noopener noreferrer">23</a></li>
         </ul>
     </div>
-</div>
-<div class="card employee-card">
+</div><div class="employee-card col-md-4 mt-4">
     <div class="card-header">
         <h2 class="card-title">asdasd</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: sdasdas</li>
-            <li class="list-group-item">Email: <a href="mailto:adasd">adasd</a></li>
-            <li class="list-group-item">School: asdasdad</li>
+            <li class="list-group-item"><span class="list-item">ID: </span>asdsd</li>
+            <li class="list-group-item"><span class="list-item">Email: </span><a
+                    href="mailto:daas">daas</a></li>
+            <li class="list-group-item"><span class="list-item">School: </span>2323</li>
         </ul>
     </div>
 </div>
-
-            </div>
         </div>
+    </div>
     </div>
 </body>
 
